# idp-aero-cs

./: .gitignore
airbrake/: .env.example  Makefile  pyproject.toml
airbrake/config/: default.yaml
airbrake/data/raw/: flights.parquet  flights_sample.parquet  test.parquet  train.parquet  val.parquet
airbrake/scripts/: generate_dataset.py  run_benchmark.py  train_baselines.py  train_pinn.py
airbrake/src/airbrake/: __init__.py
airbrake/src/airbrake.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
airbrake/src/airbrake/api/: main.py  schemas.py
airbrake/src/airbrake/api/routers/: health.py  predict.py  simulate.py
airbrake/src/airbrake/control/: __init__.py  policy.py
airbrake/src/airbrake/estimation/: __init__.py  ekf.py
airbrake/src/airbrake/models/: __init__.py  baselines.py  pinn.py  registry.py
airbrake/src/airbrake/physics/: __init__.py  atmosphere.py  rocket.py  simulation.py
airbrake/src/airbrake/training/: __init__.py  benchmark.py  dataset.py  trainer.py
airbrake/tests/: test_api.py  test_ekf.py  test_physics.py  test_pinn.py
docs/: 00_Project-Charter.md  01_Problem-and-Vision.md  02_System-Overview.md  README.md
docs/03_Requirements/: Functional-and-Performance-Requirements.md
docs/04_Research/: Literature-Review.md  Research-Gap-and-Novelty.md
docs/05_Architecture/: Airbrake-Mechanical-Architecture.md  Control-AI-and-State-Estimation.md  Embedded-Electronics-and-Sensing.md  ML-Models-and-Control-Algorithms.md
docs/06_Simulation/: CFD-and-Structural-Validation.md  Simulation-and-Dataset-Pipeline.md
(+8 files in other folders)
