[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airbrake"
version = "0.1.0"
description = "Active airbrake system: physics simulation, PINN training, and FastAPI inference server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Physics / numerics
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    # ML / deep learning
    "torch>=2.2",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "catboost>=1.2",
    "joblib>=1.3",
    # API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    # Config
    "pyyaml>=6.0",
    "rich>=13.7",
    # Data serialisation
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.scripts]
airbrake-api   = "airbrake.api.main:app"
airbrake-gen   = "scripts.generate_dataset:main"
airbrake-train = "scripts.train_pinn:main"
airbrake-bench = "scripts.run_benchmark:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
